2003-10-10  Kjartan Maraas  <kmaraas@gnome.org>

	* battstat_applet.c: (destroy_applet), (about_cb), (create_layout):
	Merge fix for bug #124150 from stable.

Tue Sep 16 13:58:07 2003  George Lebl <jirka@5z.com>

	* properties.c: when command line is being inhibited, make sure we
	  disable the entry for setting the command

Mon Sep 15 15:16:04 2003  George Lebl <jirka@5z.com>

	* battstat_applet.c: when started in lockdown mode, hide the
	  preferences item

2003-09-04  Stanislav Brabec  <sbrabec@suse.cz>

	* sounds/Makefile.am: Added battstat_applet.soundlist.in to
	EXTRA_DIST.

2003-07-26  Kevin Vandersloot

	* acpi-linux.c: Fix for kernels greater than 2.4.20. Patch from Alvaro del Castillo. 
	Fixes bug #111089

2003-07-23  Kevin Vandersloot

	* .schemas.in: clean up the strings here and remove some useless items.

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* battstat_applet.glade:  HIGify widget padding between the 
	vbox and action area of the preference dialog.  Thanks to
	<chris@gnome-de.org> Christian - Manny Calavera - Neumair.
	
Wed Jul 09 14:15:44 2003  George Lebl <jirka@5z.com>

	* properties.c, battstat_applet.glade: respect key writability

2003-06-25  Matt Keenan <matt.keenan@sun.com>

	* battstat_applet.c, properties.c 
	fix bug #115945, compilation problem with apm.h on SuSE

2003-06-15  Kevin Vandersloot

	* battstat_applet.c: Bind double click/enter/space to suspend.

2003-06-03  Kevin Vandersloot

	* battstat_applet.c: Expand the applet for Fitt's law

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* battstat_applet.glade:  HIGify the action area of the preferences
	dialog.
	* properties.c:  Remove the gtk_dialog_add_button() function calls.  
	The close and help buttons are now in the glade file.

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* battstat_applet.glade, properties.c: HIGify the preferences dialog.
	Also, added a help button and hooked it up.
	