@@ -1,3 +1,8 @@
+2003-10-22  Kevin Vandersloot
+
+	* acpi-linux.c: Fix up reading /proc/acpi../info by using acpid properly.
+	Fixes bug #88553. Patch from David Moore.
+
 2003-10-10  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* battstat_applet.c: (destroy_applet), (about_cb), (create_layout):
